kubernetes/prod/apps/comms/synapse/app/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: buypass-production
    external-dns-cf/is-dns-public: "true"
    external-dns-cf/is-public: "true"
    external-dns.target/enabled: "true"
    meta.helm.sh/release-name: synapse
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: synapse
    app.kubernetes.io/managed-by: Helm
  name: synapse-int
  namespace: comms
spec:
  ingressClassName: internal
  rules:
    - host: ${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/media/.*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
          - backend:
              service:
                name: synapse-wellknown-lighttpd
                port:
                  number: 80
            path: /.well-known/matrix
            pathType: Prefix
    - host: matrix.${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_matrix/media/.*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/purge_media_cache$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/room/.*/media
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/user/.*/media
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/media/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/quarantine_media/
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-media-repository
                port:
                  number: 8083
            path: /_synapse/admin/v1/users/.*/media$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(v2_alpha|r0|v3)/sync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|v2_alpha|r0|v3)/events$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3)/initialSync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-synchrotron
                port:
                  number: 8083
            path: /_matrix/client/(api/v1|r0|v3)/rooms/[^/]+/initialSync$
            pathType: ImplementationSpecific
          - backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
            path: /_matrix
            pathType: Prefix
          - backend:
              service:
                name: synapse-matrix-synapse
                port:
                  number: 8008
            path: /_synapse
            pathType: Prefix
  tls:
    - hosts:
        - ${CLUSTER_SECRET_PRD_DOMAIN}
        - matrix.${CLUSTER_SECRET_PRD_DOMAIN}
      secretName: matrix-tls
